--- a/index.html
+++ b/index.html
@@ -55,17 +55,7 @@
     <div class="loader-spinner"></div>
   </div>
   
-  <!-- 
-    IMPORTANT: Replace the URL below with your actual Apps Script deployment URL.
-    It should look like: https://script.google.com/macros/s/XXXXXXXXX/exec
-    Keep any query parameters by appending them — the script below handles this.
-  -->
-  <iframe 
-    id="portal" 
-    src="" 
-    allow="clipboard-write"
-    sandbox="allow-scripts allow-same-origin allow-forms allow-popups allow-popups-to-escape-sandbox"
-  ></iframe>
+  <iframe id="portal" src="" allow="clipboard-write"></iframe>
 
   <script>
     var APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwYpyIhDppONLPCCjlsmHwSOJy4vOWc0EhWaQqPS6tqyf_ytjVmqYOvJSmwMsQtOJel/exec';
